plotting and sorted flags

--- a/notebooks/2724_CELLSAWTEST.ipynb
+++ b/notebooks/2724_CELLSAWTEST.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "from cellsaw import load as loader\n",
-    "labels = loader.get41names()[7:16]\n",
+    "labels = loader.get41names()#[7:16]\n",
     "shortlabels = [label[:label.index('_')] for label in labels]\n",
     "loadparams = {'path' : '/home/ubuntu/repos/natto/natto/data',\n",
     "              'remove_unlabeled':True, 'mingenes': 200, \n",
@@ -167,10 +167,8 @@
    "source": [
     "import lmz\n",
     "for e,l in lmz.Zip(mergedPairs,labels)[:3]:\n",
-    "    merge.draw.plot(e, l)      \n",
-    "    merge.draw.confuse2(l)\n",
-    "    #merge.draw.confuse(*l,norm=False,draw=True)\n",
-    "\n"
+    "    e.plot(l)\n",
+    "    e.confuse2(l)\n"
    ]
   },
   {
@@ -188,6 +186,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "664c061b-0962-4ce5-8c1f-b5d6b911ac20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.__file__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c749441d-d413-42a2-a9f7-75310bfede9a",
    "metadata": {},
    "outputs": [],
    "source": []
