--- a/notebooks/2724_CELLSAWTEST.ipynb
+++ b/notebooks/2724_CELLSAWTEST.ipynb
@@ -40,7 +40,8 @@
    "outputs": [],
    "source": [
     "from cellsaw import load as loader\n",
-    "labels = loader.get41names()#[7:16]\n",
+    "\n",
+    "labels = loader.get41names()[7:16]\n",
     "shortlabels = [label[:label.index('_')] for label in labels]\n",
     "loadparams = {'path' : '/home/ubuntu/repos/natto/natto/data',\n",
     "              'remove_unlabeled':True, 'mingenes': 200, \n",
@@ -149,7 +150,7 @@
     "from cellsaw import merge\n",
     "pairs =xmap(load,neighs)\n",
     "\n",
-    "mergedPairs = xmap(merge.merge, pairs) \n",
+    "mergedPairs = xmap(lambda x:merge.merge(x,umaps=[10,2]), pairs) \n",
     "\n",
     "\n",
     "labels = xmap(lambda x: x.getlabels(masked=[1]), mergedPairs)\n",
@@ -166,9 +167,13 @@
    "outputs": [],
    "source": [
     "import lmz\n",
-    "for e,l in lmz.Zip(mergedPairs,labels)[:3]:\n",
+    "from cellsaw.merge import hungarianEM\n",
+    "for e,l in lmz.Zip(mergedPairs,labels)[6:]:\n",
     "    e.plot(l)\n",
-    "    e.confuse2(l)\n"
+    "    l2,e2,_,_ = hungarianEM.HEM(e,pid = 3)\n",
+    "    l2[e2] =-1\n",
+    "    e.plot([l2,l2])\n",
+    "    e.confuse2(l)"
    ]
   },
   {
@@ -180,16 +185,6 @@
    "source": [
     "import cellsaw.merge.eval as eva\n",
     "eva.evaluate(mergedPairs, labels, setid = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "664c061b-0962-4ce5-8c1f-b5d6b911ac20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.__file__"
    ]
   },
   {
