--- a/notebooks/2724_CELLSAWTEST.ipynb
+++ b/notebooks/2724_CELLSAWTEST.ipynb
@@ -168,13 +168,39 @@
    "source": [
     "import lmz\n",
     "from cellsaw.merge import hungarianEM\n",
-    "for e,l in lmz.Zip(mergedPairs,labels)[6:]:\n",
-    "    e.plot(l)\n",
-    "    l2,e2,_,_ = hungarianEM.HEM(e,pid = 3)\n",
+    "for mpair in mergedPairs[1:2]:\n",
+    "    \n",
+    "    # plot original labels\n",
+    "    labels = mpair.getlabels(masked=[])\n",
+    "    mpair.plot(labels)\n",
+    "    \n",
+    "    \n",
+    "    # plot distance hungarian\n",
+    "    mpair.plot([mpair.hungdist[0]]*2, grad=True)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # plot diffused labels\n",
+    "    labels = mpair.getlabels(masked=[1])\n",
+    "    dlabels = merge.diffuse(mpair, labels, pid =2, neighbors = 5) \n",
+    "    mpair.plot(dlabels)\n",
+    "    \n",
+    "    print(\"#\"*80)\n",
+    "    # hung and diffuse\n",
+    "    continue\n",
+    "    l2,e2,_,_ = hungarianEM.HEM(mpair,pid = 3)\n",
     "    l2[e2] =-1\n",
-    "    e.plot([l2,l2])\n",
-    "    e.confuse2(l)"
+    "    mpair.plot([l2,l2])\n",
+    "    mpair.confuse2(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72fd1d0a-932e-424a-8e65-02e72b682ccf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -193,7 +219,9 @@
    "id": "c749441d-d413-42a2-a9f7-75310bfede9a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
