--- a/notebooks/2724_CELLSAWTEST.ipynb
+++ b/notebooks/2724_CELLSAWTEST.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "import lmz\n",
     "from cellsaw.merge import hungarianEM\n",
-    "for mpair in mergedPairs[1:2]:\n",
+    "for mpair in mergedPairs:\n",
     "    \n",
     "    # plot original labels\n",
     "    labels = mpair.getlabels(masked=[])\n",
@@ -176,13 +176,13 @@
     "    \n",
     "    \n",
     "    # plot distance hungarian\n",
-    "    mpair.plot([mpair.hungdist[0]]*2, grad=True)\n",
+    "    #mpair.plot([mpair.hungdist[0]]*2, grad=True)\n",
     "    \n",
     "    \n",
     "    \n",
     "    # plot diffused labels\n",
     "    labels = mpair.getlabels(masked=[1])\n",
-    "    dlabels = merge.diffuse(mpair, labels, pid =2, neighbors = 5) \n",
+    "    dlabels = merge.diffuse(mpair, labels, pid =2, neighbors = 7) \n",
     "    mpair.plot(dlabels)\n",
     "    \n",
     "    print(\"#\"*80)\n",
