--- a/notebooks/2724_CELLSAWTEST.ipynb
+++ b/notebooks/2724_CELLSAWTEST.ipynb
@@ -40,7 +40,6 @@
    "outputs": [],
    "source": [
     "from cellsaw import load as loader\n",
-    "\n",
     "labels = loader.get41names()[7:16]\n",
     "shortlabels = [label[:label.index('_')] for label in labels]\n",
     "loadparams = {'path' : '/home/ubuntu/repos/natto/natto/data',\n",
@@ -50,9 +49,11 @@
     "def load(names):\n",
     "    # load 100 adata will have:\n",
     "    # \"true\" cluster annotation\n",
-    "    # 'name' dataset name                                               ???\n",
-    "    return [loader.easyLoad100(x,**loadparams) for x in names]\n",
-    "\n",
+    "    # 'name' dataset name \n",
+    "    adatas = [loader.easyLoad100(x,**loadparams) for x in names]\n",
+    "    # this will add the true celltype labels for the pangalodb\n",
+    "    # 'truecelltyp'\n",
+    "    return loader.loadadata.annotatepangalo(loadparams['path'], adatas, names)\n",
     "\n",
     "\n",
     "#adatas = xmap(lambda x:load.easyLoad100(x,**loadparams), labels)"
@@ -163,7 +164,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "04cc89d5-5953-42bf-8839-dfaaf6ea7dab",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import lmz\n",
@@ -174,11 +180,8 @@
     "    labels = mpair.getlabels(masked=[])\n",
     "    mpair.plot(labels)\n",
     "    \n",
-    "    \n",
     "    # plot distance hungarian\n",
     "    #mpair.plot([mpair.hungdist[0]]*2, grad=True)\n",
-    "    \n",
-    "    \n",
     "    \n",
     "    # plot diffused labels\n",
     "    labels = mpair.getlabels(masked=[1])\n",
@@ -216,12 +219,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c749441d-d413-42a2-a9f7-75310bfede9a",
+   "id": "b7c97a8f-8c3a-42fa-a93c-9b7552da8ddf",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4021f92-3424-4f68-862e-3017df0f2f37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
