save before we rewrite annotate genescore

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -152,18 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dac4a53c-c040-43dc-9080-9ede17671c04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "60a470af-0d48-41bd-8ec5-9c3503700df1",
    "metadata": {
     "jupyter": {
@@ -205,8 +193,6 @@
     "                       suffix = '.h5',\n",
     "                       sample_size = 1000, \n",
     "                       remove_cells = {'celltype': \"no pangalo\"})\n",
-    "\n",
-    "\n",
     "#TODO map (sc.pp.filter(mingenes)), dont put mingenes into the reader (as it its also used as csv)\n"
    ]
   },
@@ -227,8 +213,17 @@
     "ranked_datasets_list, similarity_df = sim.rank_by_similarity(\n",
     "                                    target = target_datasets, \n",
     "                                    source = source_datasets,            \n",
-    "                                    return_similarity = True)"
+    "                                    return_similarity = True)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b5cb5a-29da-4493-97e0-6594beef7d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -245,21 +240,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c141fd16-c4f5-43cf-bcef-9fe1bc799fe4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "712196b1-5e89-4ac3-be07-9714c8c71d6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time \n",
+    "\n",
+    "from cellsaw import merge \n",
     "id = 0\n",
     "target = target_datasets[id]\n",
     "source = ranked_datasets_list[id][0]\n",
-    "target = annotate_label(target,source,source_label = 'celltype', \n",
+    "\n",
+    "target = merge.annotate_label(target,source,source_label = 'celltype', \n",
     "                               target_label='predicted_celltype', \n",
     "                               pca_dim = 20, umap_dim = None,\n",
     "                       n_intra_neighbors = 7,\n",
     "                       n_inter_neighbors = 2,\n",
-    "                       similarity_scale_factor = 1.0\n",
-    "                       )"
+    "                       similarity_scale_factor = 1.0)"
    ]
   },
   {
@@ -285,10 +290,6 @@
     "                               target_label='predicted_celltype', \n",
     "                               pca_dim = 20, umap_dim = None)\n",
     "\n",
-    "# TODO: make annotate_label(target,source,source_label = 'celltype', \n",
-    "                               target_label='predicted_celltype', \n",
-    "                               pca_dim = 20, umap_dim = None) \n",
-    "                But for many sources! \n",
     "                \n",
     "                \n",
     "\n",
