splitting diffusion file

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -264,25 +264,39 @@
     "\n",
     "\n",
     "import scanpy as sc\n",
-    "ncells = 10 \n",
+    "ncells = 10\n",
     "sc.pp.subsample(target, fraction=None, n_obs=ncells or 50,random_state=None, copy=False)\n",
     "sc.pp.subsample(source, fraction=None, n_obs=ncells or 50,random_state=None, copy=False)\n",
     "\n",
     "\n",
     "# TODO rename predict_celltype\n",
+    "# TODO why does pca=2 crash? make plot\n",
     "target = merge.annotate_label(target,source,source_label = 'celltype',  \n",
     "                               target_label='predicted_celltype', \n",
-    "                               pca_dim = 5, umap_dim = 2,\n",
-    "                               n_intra_neighbors = 5,\n",
+    "                               pca_dim = 2, umap_dim = [],\n",
+    "                               n_intra_neighbors = 2,\n",
     "                               n_inter_neighbors = 1,\n",
     "                               make_even= False,\n",
     "                               sigmafac = 1,\n",
     "                               similarity_scale_factor = 1.0) # TODO implent, (check dists again also...)\n",
     "\n",
-    "merge.plot(source, target, source_label = 'celltype',\n",
-    "           target_label = 'predicted_celltype', pca =5)\n",
+    "\n",
+    "# plot should work with pca=2\n",
+    "m = merge.plot(source, target, source_label = 'celltype',\n",
+    "           target_label = 'predicted_celltype')\n",
+    "\n",
+    "\n",
+    "\n",
     "# TODO allow make_even = False "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2649c91-d636-4702-aac2-2cc7790aca71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -651,6 +665,46 @@
     "f = lambda x:(1-1/2*math.erf(x/math.sqrt(2)))*1/(math.e**(-(x)**2/(2))/(math.sqrt(2*math.pi)))\n",
     "x=np.linspace(0,1,100)\n",
     "plt.plot(x,t.Map(f,x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1e115b2-0f1e-4cee-9484-30ad695746be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.datasets import make_blobs\n",
+    "\n",
+    "nsamples = 40\n",
+    "centers = 3\n",
+    "X,y = make_blobs(n_samples=nsamples, n_features=2,\n",
+    "                            centers=centers, \n",
+    "                            cluster_std=1.0, \n",
+    "                            center_box=(-10.0, 10.0), \n",
+    "                            shuffle=True, \n",
+    "                            random_state=None, \n",
+    "                            return_centers=False)\n",
+    "\n",
+    "\n",
+    "X2,y2, X, y = # TODO train/test split\n",
+    "\n",
+    "\n",
+    "from cellsaw.merge import Diffusion as D \n",
+    "from matplotlib import pyplot as plt\n",
+    "dif = D()\n",
+    "dif.fit(X,y)\n",
+    "re = dif.predict(X2)\n",
+    "\n",
+    "def plot(x,y):\n",
+    "    plt.scatter(x[:,0],x[:,1],  c = y)\n",
+    "\n",
+    "plot(X,y)\n",
+    "plt.show()\n",
+    "plot(X2,re)\n",
+    "\n",
+    "# plot hungarian/nn connection\n"
    ]
   }
  ],
