--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
-    "mpl.rc(\"figure\", dpi=50)\n",
+    "mpl.rc(\"figure\", dpi=200)\n",
     "\n",
     "from ubergauss import tools as t\n",
     "import numpy as np\n",
@@ -250,11 +250,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "712196b1-5e89-4ac3-be07-9714c8c71d6b",
+   "id": "a7def8df-57ef-46c6-b322-d36c5d8e809f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time \n",
+    "# %%time \n",
     "\n",
     "from cellsaw import merge \n",
     "id = 0\n",
@@ -264,7 +264,7 @@
     "\n",
     "\n",
     "import scanpy as sc\n",
-    "ncells = 10\n",
+    "ncells = 200\n",
     "sc.pp.subsample(target, fraction=None, n_obs=ncells or 50,random_state=None, copy=False)\n",
     "sc.pp.subsample(source, fraction=None, n_obs=ncells or 50,random_state=None, copy=False)\n",
     "\n",
@@ -274,16 +274,15 @@
     "target = merge.annotate_label(target,source,source_label = 'celltype',  \n",
     "                               target_label='predicted_celltype', \n",
     "                               pca_dim = 2, umap_dim = [],\n",
-    "                               n_intra_neighbors = 2,\n",
+    "                               n_intra_neighbors = 5,\n",
     "                               n_inter_neighbors = 1,\n",
     "                               make_even= False,\n",
     "                               sigmafac = 1,\n",
     "                               similarity_scale_factor = 1.0) # TODO implent, (check dists again also...)\n",
     "\n",
     "\n",
-    "# plot should work with pca=2\n",
     "m = merge.plot(source, target, source_label = 'celltype',\n",
-    "           target_label = 'predicted_celltype')\n",
+    "           target_label = 'predicted_celltype', pca =2)\n",
     "\n",
     "\n",
     "\n",
@@ -674,11 +673,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from sklearn.datasets import make_blobs\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "nsamples = 40\n",
-    "centers = 3\n",
+    "nsamples = 50\n",
+    "centers = 5\n",
     "X,y = make_blobs(n_samples=nsamples, n_features=2,\n",
     "                            centers=centers, \n",
     "                            cluster_std=1.0, \n",
@@ -688,23 +687,61 @@
     "                            return_centers=False)\n",
     "\n",
     "\n",
-    "X2,y2, X, y = # TODO train/test split\n",
-    "\n",
+    "X2,X,y2,y =  train_test_split(\n",
+    "  X, y, test_size=0.5, random_state=42)\n",
     "\n",
     "from cellsaw.merge import Diffusion as D \n",
     "from matplotlib import pyplot as plt\n",
-    "dif = D()\n",
+    "dif = D(sigmafac = 2)\n",
     "dif.fit(X,y)\n",
     "re = dif.predict(X2)\n",
     "\n",
     "def plot(x,y):\n",
     "    plt.scatter(x[:,0],x[:,1],  c = y)\n",
+    "    [plt.text(a,b, str(i)) for i,(a,b) in enumerate(x)] \n",
     "\n",
     "plot(X,y)\n",
     "plt.show()\n",
     "plot(X2,re)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb9e9c1f-8e56-4492-aa7a-4983114578dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lmz import *\n",
     "\n",
-    "# plot hungarian/nn connection\n"
+    "X = [ (a,b) for a in range(1,10) for b in range(1,10)   ]\n",
+    "X = np.array(X)\n",
+    "\n",
+    "def my(x):\n",
+    "    a,b = x    \n",
+    "    # a = number of posibilities \n",
+    "    # b = scew\n",
+    "    b = 1/b\n",
+    "    z = np.array([b**e  for e in range(a)])\n",
+    "    z/=z.sum()\n",
+    "    res = -sum([zz*np.log(zz) for zz in z])\n",
+    "    print(z,a,b,res)\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "col = Map(my,X)\n",
+    "plt.scatter(X[:,0],X[:,1],c = col, cmap = 'viridis' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792d1da0-b852-4236-a109-e3e2fdf1ec31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(X[:,0],X[:,1],c = col, cmap = 'viridis' )"
    ]
   }
  ],
