fixing fig1 notebook

--- a/notebooks/1_tissue_similarity.ipynb
+++ b/notebooks/1_tissue_similarity.ipynb
@@ -36,14 +36,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef8cade8-f12e-40c6-8c55-857c6223c80d",
+   "id": "51a6f108-9574-4292-a0bd-c635f77489dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data preparation\n",
     "import cellsaw\n",
     "import cellsaw.io_utils\n",
-    "#import cellsaw.preprocess\n",
     "import notebookhelper\n",
     "\n",
     "# loading data-> [[anndata]] \n",
@@ -54,13 +53,22 @@
     "                            suffix = '.h5',\n",
     "                            dir = path, \n",
     "                            datasets = filenames) \n",
-    "                                for seed in [42,1337,31337,501,404]]\n",
-    "\n",
+    "                                for seed in [42,1337,31337,501,404]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef8cade8-f12e-40c6-8c55-857c6223c80d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get genescores according to different pp methods \n",
     "# note how seurat is first so we can calculate values \n",
     "# before normalizing as normalize is 'auto'\n",
     "preprocessingmethods = ['seurat_v3','meanexpression','cell_ranger','seurat', 'natto']\n",
-    "_ = [[cellsaw.preprocess.annotate_genescores(d, selector = pp) for d in datasets] for pp in preprocessingmethods]\n"
+    "_ = [[cellsaw.preprocess.annotate_genescore(d, selector = pp) for d in datasets] \n",
+    "        for pp in preprocessingmethods]\n"
    ]
   },
   {
@@ -70,20 +78,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "# lets collect data in a gigantic dataframe\n",
     "# how did i do this before? \n",
-    "import cellsaw.similarity.measures\n",
-    "\n",
+    "import cellsaw.similarity.measures as measures\n",
     "def mklist(rep_id,datasets,preprocessing,filenames):\n",
     "    res = [ (rep_id,'cosine',genecount,preprocessing,\n",
-    "             *cellsaw.similarity.measures.adata_to_score(datasets,genecount, preprocessing, 'cosine', filenames)) \n",
-    "                  for genecount in range(400,1000,50) ]\n",
+    "             *measures.adata_to_score(datasets,genecount, preprocessing, 'cosine', filenames)) \n",
+    "                  for genecount in range(200,2000,50) ]\n",
     "    res += [ (rep_id,'jaccard',genecount,preprocessing,\n",
-    "              *cellsaw.similarity.measures.adata_to_score(datasets,genecount, preprocessing, 'jaccard', filenames)) \n",
-    "                  for genecount in range(1000,3000,200) ]\n",
+    "              *measures.adata_to_score(datasets,genecount, preprocessing, 'jaccard', filenames)) \n",
+    "                  for genecount in range(200,4000,100) ]\n",
     "    return res\n",
     "\n",
-    "result = [line for i,d in enumerate(datasets) for pp in preprocessingmethods for line in mklist(i,d,pp, filenames)]"
+    "result = [line for i,d in enumerate(datasets) \n",
+    "               for pp in preprocessingmethods \n",
+    "               for line in mklist(i,d,pp, filenames)]"
    ]
   },
   {
@@ -93,7 +103,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# do plots oO \n"
+    "# now we make a dataFrame\n",
+    "indexlabels = 'repeat similarity genecount preprocessing P@1 P@2 P@3'.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66399057-3f57-4ffb-8e0b-1c64cbf8ad4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(result,columns=indexlabels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b619d7-017b-473e-ad50-65ce32e9b247",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f179ec5e-8a98-4268-bd6d-0aa396d3bf0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "dff = df[df.similarity == 'jaccard']\n",
+    "sns.lineplot(data=dff, x='genecount', y='P@1', hue = 'preprocessing')\n",
+    "plt.show()\n",
+    "sns.lineplot(data=dff, x='genecount', y='P@2', hue = 'preprocessing')\n",
+    "plt.show()\n",
+    "sns.lineplot(data=dff, x='genecount', y='P@3', hue = 'preprocessing')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5f1e49a-99db-4206-9554-5d96724692d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.show()\n",
+    "dff = df[df.similarity == 'cosine']\n",
+    "sns.lineplot(data=dff, x='genecount', y='P@1', hue = 'preprocessing')\n",
+    "plt.show()\n",
+    "sns.lineplot(data=dff, x='genecount', y='P@2', hue = 'preprocessing')\n",
+    "plt.show()\n",
+    "sns.lineplot(data=dff, x='genecount', y='P@3', hue = 'preprocessing')"
    ]
   }
  ],
