--- a/notebooks/1_tissue_similarity_rerun2kcells.ipynb
+++ b/notebooks/1_tissue_similarity_rerun2kcells.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
-    "mpl.rc(\"figure\", dpi=400)"
+    "#mpl.rc(\"figure\", dpi=400)"
    ]
   },
   {
@@ -48,7 +48,7 @@
     "# loading data-> [[anndata]] \n",
     "filenames = notebookhelper.filenames\n",
     "path = '/home/ubuntu/data/scdata/'\n",
-    "datasets = [cellsaw.io_utils.read(sample_size=1000, \n",
+    "datasets = [cellsaw.io_utils.read(sample_size=2000, \n",
     "                            sampleseed = seed,\n",
     "                            suffix = '.h5',\n",
     "                            dir = path, \n",
@@ -67,7 +67,7 @@
     "# note how seurat is first so we can calculate values \n",
     "# before normalizing as normalize is 'auto'\n",
     "preprocessingmethods = ['seurat_v3','meanexpression','cell_ranger','seurat', 'natto','meanexpressionnolog']\n",
-    "_ = [[cellsaw.preprocess.annotate_genescore(d, selector = pp) for d in datasets] for pp in preprocessingmethods]\n"
+    "_ = [[cellsaw.preprocess.annotate_genescore(d, selector = pp) for d in datasets]   for pp in preprocessingmethods]\n"
    ]
   },
   {
@@ -93,9 +93,7 @@
     "result = [line for i,d in enumerate(datasets) \n",
     "               for pp in preprocessingmethods \n",
     "               for line in mklist(i,d,pp, filenames)]\n",
-    "\n",
-    "## df.to_pickle(\"1_tissuesim_18B.pkl\")\n",
-    "# df.to_pickle(\"1_tissuesim_21B.pkl\") # contains mean no log"
+    "\n"
    ]
   },
   {
@@ -106,7 +104,9 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.to_pickle(\"1_tissuesim_B23_2kcells.pkl\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -127,29 +127,17 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "df = pd.DataFrame(result,columns=indexlabels)\n",
     "dff = df[df.similarity == 'jaccard']\n",
     "# y axis 1.. .75 (maybe try meanexpression withouy log!)\n",
     "sns.set_context(\"notebook\")\n",
     "sns.set_style('darkgrid')\n",
     "\n",
-    "niceprocessingmethods = ['Seurat v3','Mean expression','Cell Ranger','Seurat', 'Linear Seurat', 'Mean no log']\n",
+    "niceprocessingmethods = ['Seurat v3','Mean expression','Cell Ranger','Seurat', 'Natto', 'Mean no log']\n",
     "dff = dff.replace(preprocessingmethods, niceprocessingmethods)\n",
-    "sns.lineplot(data=dff, x='genecount', y='P@3', hue = 'preprocessing',ci='sd')\n",
-    "plt.title('Separating tissue types', fontsize = 24)\n",
-    "plt.xlabel('number of genes')\n",
-    "plt.ylabel('p@3±σ')\n",
-    "\n",
-    "\n",
-    "plt.show()\n",
-    "dff = df[df.similarity == 'cosine']\n",
-    "# y axis 1.. .75 (maybe try meanexpression withouy log!)\n",
-    "sns.set_context(\"notebook\")\n",
-    "sns.set_style('darkgrid')\n",
-    "\n",
-    "niceprocessingmethods = ['Seurat v3','Mean expression','Cell Ranger','Seurat', 'Linear Seurat', 'Mean no log']\n",
-    "dff = dff.replace(preprocessingmethods, niceprocessingmethods)\n",
-    "sns.lineplot(data=dff, x='genecount', y='P@3', hue = 'preprocessing',ci='sd')\n",
+    "sns.lineplot(data=dff, x='genecount', y='P@3', hue = 'preprocessing')\n",
     "plt.title('Separating tissue types', fontsize = 24)\n",
     "plt.xlabel('number of genes')\n",
     "plt.ylabel('p@3±σ')"
@@ -187,6 +175,14 @@
     "sns.lineplot(data=dff, x='genecount', y='P@3', hue = 'preprocessing')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14884e8c-bdab-482f-beaf-c01a0231e80b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
