--- a/notebooks/1_tissue_similarity.ipynb
+++ b/notebooks/1_tissue_similarity.ipynb
@@ -46,13 +46,12 @@
     "import notebookhelper\n",
     "\n",
     "# loading data-> [[anndata]] \n",
-    "filenames = notebookhelper.filenames\n",
+    "filenames = notebookhelper.filenames44\n",
     "path = '/home/ubuntu/data/scdata/'\n",
-    "datasets = [cellsaw.io_utils.read(sample_size=1000, \n",
+    "datasets = [[cellsaw.io_utils.nuread(sample_size=1000, \n",
     "                            sampleseed = seed,\n",
-    "                            suffix = '.h5',\n",
     "                            dir = path, \n",
-    "                            datasets = filenames) \n",
+    "                            dataset =f) for f in filenames]\n",
     "                                for seed in [42,1337,31337,501,404]]"
    ]
   },
@@ -187,6 +186,14 @@
     "sns.lineplot(data=dff, x='genecount', y='P@3', hue = 'preprocessing')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a10379bc-c4d0-4174-bb41-eff76718bf9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
