--- a/notebooks/2_similarity_TS.ipynb
+++ b/notebooks/2_similarity_TS.ipynb
@@ -58,8 +58,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "78007b37-5944-4b65-a85c-0cf50b3025ef",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "if False: # calculates an affinity matrix with correct diagonals:\n",
+    "    [cellsaw.preprocess.annotate_genescore(ts, selector = 'cell_ranger') for ts in datasets[1]] \n",
+    "    [cellsaw.preprocess.annotate_genescore(ts, selector = 'cell_ranger') for ts in datasets[0]] \n",
+    "    import cellsaw.similarity.measures as measures\n",
+    "    lol = [measures.matrixmap(ts,td,'jaccard', 'cell_ranger', 2450) for ts,td in zip(datasets[0],datasets[1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a7c7f350-f158-4c65-81dc-8c8e6f4bffea",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "preprocessingmethods = ['seurat_v3','meanexpression','cell_ranger','seurat', 'natto','meanexpressionnolog']\n",
@@ -172,6 +196,14 @@
     "sns.lineplot(data=dff, x='genecount', y='score', hue = 'preprocessing', ci=None)\n",
     "decorateshow()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbcca194-542c-4a27-aebd-6d7332af88a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
