solved the nb mp problem

--- a/notebooks/3_labeltransfer.ipynb
+++ b/notebooks/3_labeltransfer.ipynb
@@ -49,8 +49,8 @@
     "                            dir = path,\n",
     "                            remove_cells = {'celltype': [\"no pangalo\", \"Unknown\"]},\n",
     "                            dataset =f) for f in filenames]\n",
-    "                                #for seed in [42,1337,31337]] TODO\n",
-    "                                for seed in [42]]"
+    "                                for seed in [42,1336,31338]] \n",
+    "                                #for seed in [42]]"
    ]
   },
   {
@@ -96,6 +96,9 @@
    "execution_count": null,
    "id": "23bd06d6-8f86-4ca6-9390-cfc890fd1ae2",
    "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -103,18 +106,22 @@
     "from cellsaw import annotate\n",
     "from ubergauss import tools\n",
     "import cellsaw.preprocess as prep\n",
+    "import copy\n",
     "\n",
     "def evaluate(methods):\n",
     "    res = []\n",
     "    \n",
-    "    def mkscore(method_i_j_data):\n",
-    "        method, i,j,data = method_i_j_data\n",
-    "        score,name = method(data)\n",
-    "        return {'reapeat':i,'dataset':j,'score':score, 'method':name}\n",
-    "   \n",
-    "    warp = (  [method,i,j,pair]  for i,rankedlist in enumerate(datasets) for j, pair in enumerate(rankedlist) for method in methods)\n",
-    "    return tools.xmap(mkscore, warp)\n",
     "\n",
+    "    def mkscore(method_i_j):\n",
+    "        method, i,j = method_i_j\n",
+    "        d = [z.copy() for z in datasets[i][j]]\n",
+    "        score,name = method(d)\n",
+    "        return {'reapeat':i,'dataset':j,'score':score, 'method':name}\n",
+    "    warp = (  [method,i,j]  for i,rankedlist in enumerate(datasets) \n",
+    "                for j, pair in enumerate(rankedlist) for method in methods)\n",
+    "    #pool = Pool(32, maxtasksperchild = 1)\n",
+    "    #return pool.map(mkscore,warp)\n",
+    "    return tools.xmap(mkscore, warp, n_jobs = 16)\n",
     "\n",
     "best = {'linear_assignment_factor': 5.62261789365175, \n",
     "        'n_genes': 1050, 'n_inter_neighbors': 4, 'n_intra_neighbors': 5, \n",
@@ -241,8 +248,8 @@
     "\n",
     "\n",
     "if True:\n",
-    "    #bla = evaluate([mymethod, linsum, knn, rawdiff,markercount, rawdiff_combat, tunnelclust, multiannotate3, multiannotate2, multiannotate4])  # TODO/\n",
-    "    bla = evaluate([multiannotate3, multiannotate2, multiannotate4])\n",
+    "    bla = evaluate([mymethod, linsum, knn, rawdiff,markercount, rawdiff_combat, tunnelclust, multiannotate3, multiannotate2, multiannotate4]) \n",
+    "    #bla = evaluate([mymethod])\n",
     "    import pandas as pd\n",
     "    import seaborn as sns\n",
     "    df = pd.DataFrame(bla)\n",
@@ -250,6 +257,14 @@
     "    \n",
     "#evaluate([multiannotate])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79db37ff-624b-4896-bf32-c4f9dcdcafff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -421,6 +436,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "927fd765-2cb6-49aa-8eea-887c3999afe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets[0][28]\n",
+    "\n",
+    "\n",
+    "from cellsaw import merge as merg\n",
+    "from cellsaw import preprocess as pp \n",
+    "from cellsaw import draw \n",
+    "\n",
+    "def sad(adatas):\n",
+    "    adatas = [a.copy() for a in adatas[:2]]\n",
+    "    pp.annotate_genescore(adatas,selector = 'cell_ranger')\n",
+    "    m = merg.Merge(adatas)\n",
+    "    m.plot([a.obs['celltype'] for a in adatas])\n",
+    "    \n",
+    "sad(datasets[0][28])\n",
+    "sad(datasets[0][6])\n",
+    "sad(datasets[0][27])\n",
+    "sad(datasets[0][17])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e0899c6a-b0b3-46d6-98b5-cac99ac53f0b",
    "metadata": {},
    "outputs": [],
@@ -479,7 +520,9 @@
    "id": "8c4ae363-6f99-4397-bd74-4cec38330a31",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
