--- a/notebooks/3_labeltransfer.ipynb
+++ b/notebooks/3_labeltransfer.ipynb
@@ -310,13 +310,17 @@
     "from cellsaw import merge as merg\n",
     "from cellsaw import preprocess as pp \n",
     "from cellsaw import draw \n",
+    "from cellsaw import util\n",
     "\n",
     "def sad(adatas):\n",
     "    adatas = [a.copy() for a in adatas[:2]]\n",
     "    pp.annotate_genescore(adatas,selector = 'cell_ranger')\n",
-    "    m = merg.Merge(adatas)\n",
-    "    m.plot([a.obs['celltype'] for a in adatas])\n",
-    "    \n",
+    "    m = merg.Merge(adatas,umaps= [2,10])\n",
+    "    #m.plot([a.obs['celltype'] for a in adatas])\n",
+    "    labels = [a.obs['celltype'] for a in adatas]\n",
+    "    m.plot(labels,mkmix = True)\n",
+    "    util.setd2_kernel_mds(m)\n",
+    "    m.plot(labels, mkmix = True)\n",
     "    \n",
     "pv = df.pivot_table('score','method','dataset')\n",
     "for i,e in enumerate(pv.index):\n",
@@ -398,8 +402,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import anndata as ad\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77accb71-bf20-44c2-8e3c-5eaa2bd06309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c978cbf-0adb-41f8-bfbb-163d2ce3bd44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
